# Cloth

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/assets/shaders/: bloom.fs
App/src/: Main.cpp
Core/: CMakeLists.txt
Core/include/ClothCore/: Arrow.h  Collision.h  Point.h  Simulation.h  Stick.h  Vector.h
Core/src/: Arrow.cpp  Collision.cpp  Point.cpp  Simulation.cpp  Stick.cpp
